# Ext_Distill_Sim

./: .gitignore  Example1.ipynb  Example2.ipynb  Example3.ipynb  Example4.ipynb  Example5.ipynb  Example6.ipynb  Example7.ipynb  README.md  pyproject.toml  requirements-jupyterlite.txt
.github/workflows/: deploy-jupyterlite.yml
docs/: conf.py  conf.py~  index.rst  index.rst~  utils.rst
docs/_build/: .buildinfo  distillation.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  thermo_models.html  utils.html
docs/_build/.doctrees/: distillation.doctree  environment.pickle  thermo_models.doctree  utils.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: distillation.doctree  environment.pickle  index.doctree  modules.doctree  thermo_models.doctree  utils.doctree
docs/_build/html/: .buildinfo  distillation.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  thermo_models.html  utils.html
docs/_build/html/_sources/: distillation.rst.txt  modules.rst.txt
docs/source/: thermo_models.rst
src/: ArclengthContinuationExample.ipynb  Example1.ipynb  Example5.ipynb
src/distillation/: DistillationBinary.py  DistillationDoubleFeed.py  DistillationModel.py  DistillationSingleFeed.py  DistillationTernary.py  __init__.py  residue_curves.py
src/thermo_models/: MargulesModel.py  RaoultsLawModel.py  VLEEmpiricalModel.py  VLEModelBaseClass.py  VanLaarModel.py  WilsonModel.py  __init__.py
src/utils/: AntoineEquation.py  __init__.py
tools/: build_jupyterlite.py
